# etlutil

./: .gitignore  README.md  pyproject.toml
etlutil/: __init__.py  data_structures.py  date.py
tests/: conftest.py  test_data_structures.py  test_data_structures_edges.py  test_data_structures_property.py  test_date.py
tests/fixtures/: jira_item.json  walk_example.json
